--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -19,7 +19,7 @@
     <ImageView
         android:id="@+id/previewImageView"
         android:layout_width="0dp"
-        android:layout_height="450dp"
+        android:layout_height="400dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -44,7 +44,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/galleryButton"
-        app:layout_constraintBottom_toTopOf="@id/descriptionInput"/>
+        app:layout_constraintBottom_toTopOf="@id/action_location"/>
 
     <Button
         android:id="@+id/galleryButton"
@@ -60,6 +60,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cameraButton" />
 
+    <CheckBox
+        android:id="@+id/action_location"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/location"
+        android:layout_marginHorizontal="36dp"
+        app:layout_constraintTop_toBottomOf="@id/cameraButton"
+        app:layout_constraintBottom_toTopOf="@id/descriptionInput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/descriptionInput"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -68,7 +79,7 @@
         android:layout_margin="8dp"
         android:hint="@string/description_hint"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cameraButton"
+        app:layout_constraintTop_toBottomOf="@id/action_location"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/submit_btn">
         <com.google.android.material.textfield.TextInputEditText
